--- a/mall-product/src/main/resources/application-dev.yml
+++ b/mall-product/src/main/resources/application-dev.yml
@@ -2,6 +2,16 @@ server:
   port: 8081
 
 spring:
+  spring:
+    application:
+      name: mall-product
+    cloud:
+      nacos:
+        discovery:
+          server-addr: 127.0.0.1:8848
+          namespace: dev_id
+        config:
+          namespace: dev_name
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://192.168.100.51:3306/ac_db?serverTimezone=Asia/Shanghai&useUnicode=true&tinyInt1isBit=false&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
