--- a/mall-pom/pom.xml
+++ b/mall-pom/pom.xml
@@ -7,6 +7,7 @@
         <module>../mall-member</module>
         <module>../mall-product</module>
         <module>../mall-common</module>
+        <module>../mall-order</module>
     </modules>
 
     <groupId>com.ac</groupId>
