--- a/mall-feign/pom.xml
+++ b/mall-feign/pom.xml
@@ -10,21 +10,15 @@
     </parent>
 
     <groupId>com.ac</groupId>
-    <artifactId>mall-order</artifactId>
+    <artifactId>mall-feign</artifactId>
     <version>${mall.version}</version>
-    <name>mall-order</name>
-    <description>订单服务</description>
+    <name>mall-feign</name>
+    <description>OpenFeign服务</description>
 
     <dependencies>
         <dependency>
             <groupId>com.ac</groupId>
             <artifactId>mall-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.ac</groupId>
-            <artifactId>mall-feign</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
