--- a/mall-pom/pom.xml
+++ b/mall-pom/pom.xml
@@ -8,6 +8,7 @@
         <module>../mall-product</module>
         <module>../mall-common</module>
         <module>../mall-order</module>
+        <module>../mall-feign</module>
     </modules>
 
     <groupId>com.ac</groupId>
@@ -81,6 +82,12 @@
             <dependency>
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+                <version>${alibaba.cloud.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-openfeign</artifactId>
                 <version>${alibaba.cloud.version}</version>
             </dependency>
 
@@ -201,6 +208,11 @@
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
 
         <dependency>
