--- a/mall-common/bak/common.yml
+++ b/mall-common/bak/common.yml
@@ -1,4 +1,17 @@
 spring:
+  redis:
+    database: 0
+    host: 127.0.0.1
+    port: 6379
+    password: 123abc
+    jedis:
+      pool:
+        max-active: 500  #连接池的最大数据库连接数。设为0表示无限制
+        max-idle: 20   #最大空闲数
+        max-wait: -1
+        min-idle: 5
+    timeout: 1000
+
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://192.168.100.51:3306/ac_db?serverTimezone=Asia/Shanghai&useUnicode=true&tinyInt1isBit=false&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
