--- a/mall-pom/pom.xml
+++ b/mall-pom/pom.xml
@@ -39,6 +39,7 @@
         <mybatis.version>3.5.3</mybatis.version>
         <hutool.version>5.1.4</hutool.version>
         <redis.version>3.0.2</redis.version>
+        <redisson.version>3.20.1</redisson.version>
     </properties>
 
     <!-- 管理子类所有的jar包的版本，这样的目的是方便去统一升级和维护 -->
@@ -173,6 +174,12 @@
                 <version>${redis.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.redisson</groupId>
+                <artifactId>redisson-spring-boot-starter</artifactId>
+                <version>${redisson.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -288,6 +295,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
         </dependency>
     </dependencies>
 
