--- a/mall-core/pom.xml
+++ b/mall-core/pom.xml
@@ -3,6 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <artifactId>mall-pom</artifactId>
         <groupId>com.ac</groupId>
@@ -10,30 +11,10 @@
     </parent>
 
     <groupId>com.ac</groupId>
-    <artifactId>mall-order</artifactId>
+    <artifactId>mall-core</artifactId>
     <version>${mall.version}</version>
-    <name>mall-order</name>
-    <description>订单服务</description>
-
-    <dependencies>
-        <dependency>
-            <groupId>com.ac</groupId>
-            <artifactId>mall-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.ac</groupId>
-            <artifactId>mall-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.ac</groupId>
-            <artifactId>mall-feign</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
+    <name>mall-core</name>
+    <description>稳定的不经常改动的基础服务</description>
 
     <build>
         <plugins>
