--- a/mall-member/pom.xml
+++ b/mall-member/pom.xml
@@ -18,6 +18,12 @@
     <dependencies>
         <dependency>
             <groupId>com.ac</groupId>
+            <artifactId>mall-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.ac</groupId>
             <artifactId>mall-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
