--- a/mall-gateway/pom.xml
+++ b/mall-gateway/pom.xml
@@ -26,6 +26,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
+            <version>4.0.4</version>
         </dependency>
     </dependencies>
 
