--- a/mall-gateway/pom.xml
+++ b/mall-gateway/pom.xml
@@ -22,6 +22,12 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.ac</groupId>
+            <artifactId>mall-oauth2</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <!-- Spring Cloud Gateway 是使用 netty+webflux 实现因此不需要再引入 web 模块 -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -38,7 +44,7 @@
         <dependency>
             <groupId>org.springframework.security.oauth</groupId>
             <artifactId>spring-security-oauth2</artifactId>
-            <version>2.5.2.RELEASE</version>
+            <version>2.3.4.RELEASE</version>
         </dependency>
 
 <!--        <dependency>-->
