--- a/mall-oauth2/pom.xml
+++ b/mall-oauth2/pom.xml
@@ -10,40 +10,28 @@
     </parent>
 
     <groupId>com.ac</groupId>
-    <artifactId>mall-auth</artifactId>
+    <artifactId>mall-oauth2</artifactId>
     <version>${mall.version}</version>
-    <name>mall-auth</name>
-    <description>授权服务</description>
+    <name>mall-oauth2</name>
+    <description>oauth2服务</description>
 
     <dependencies>
-        <dependency>
-            <groupId>com.ac</groupId>
-            <artifactId>mall-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.cloud</groupId>-->
+<!--            <artifactId>spring-cloud-starter-oauth2</artifactId>-->
+<!--        </dependency>-->
 
         <dependency>
-            <groupId>com.ac</groupId>
-            <artifactId>mall-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>org.springframework.security.oauth</groupId>
+            <artifactId>spring-security-oauth2</artifactId>
+            <version>2.3.4.RELEASE</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.ac</groupId>
-            <artifactId>mall-oauth2</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-oauth2</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.nimbusds</groupId>
-            <artifactId>nimbus-jose-jwt</artifactId>
-            <version>9.31</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.nimbusds</groupId>-->
+<!--            <artifactId>nimbus-jose-jwt</artifactId>-->
+<!--            <version>9.31</version>-->
+<!--        </dependency>-->
     </dependencies>
 
     <build>
