--- a/mall-gateway/pom.xml
+++ b/mall-gateway/pom.xml
@@ -47,10 +47,10 @@
             <version>2.3.4.RELEASE</version>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.security</groupId>-->
-<!--            <artifactId>spring-security-config</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.security</groupId>
