--- a/mall-oauth2-module/pom.xml
+++ b/mall-oauth2-module/pom.xml
@@ -10,10 +10,10 @@
     </parent>
 
     <groupId>com.ac</groupId>
-    <artifactId>mall-oauth2</artifactId>
+    <artifactId>mall-oauth2-module</artifactId>
     <version>${mall.version}</version>
-    <name>mall-oauth2</name>
-    <description>oauth2服务</description>
+    <name>mall-oauth2-module</name>
+    <description>oauth2模块</description>
 
     <dependencies>
 
