--- a/mall-gateway/pom.xml
+++ b/mall-gateway/pom.xml
@@ -24,7 +24,7 @@
 
         <dependency>
             <groupId>com.ac</groupId>
-            <artifactId>mall-oauth2</artifactId>
+            <artifactId>mall-oauth2-module</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
