--- a/mall-pom/pom.xml
+++ b/mall-pom/pom.xml
@@ -199,6 +199,12 @@
                 <version>${xxljob.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.xuxueli</groupId>
+                <artifactId>xxl-job-admin</artifactId>
+                <version>${xxljob.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -329,6 +335,11 @@
         <dependency>
             <groupId>com.xuxueli</groupId>
             <artifactId>xxl-job-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-admin</artifactId>
         </dependency>
     </dependencies>
 
